--- a/package.json
+++ b/package.json
@@ -3,16 +3,11 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-    "start": "node index.js"
+    "start": "node index.js",
+    "postinstall": "echo 'Skipping Chrome install'"
   },
   "dependencies": {
     "express": "^4.18.2",
-    "puppeteer": "^21.0.0",
-    "puppeteer-extra": "^3.3.6",
-    "puppeteer-extra-plugin-stealth": "^2.11.2",
-    "user-agents": "^1.1.1",
-    "lodash": "^4.17.21",
-    "crypto-js": "^4.2.0",
-    "dotenv": "^16.0.0"
+    "puppeteer": "^21.0.0"
   }
 }
