--- a/package.json
+++ b/package.json
@@ -1,13 +1,19 @@
 {
-  "name": "twitter-bot",
-  "version": "1.0.0",
+  "name": "twitter-secure-bot",
+  "version": "6.0.0",
   "main": "index.js",
   "scripts": {
-    "start": "node index.js",
-    "postinstall": "echo 'Skipping Chrome install'"
+    "start": "node --max-old-space-size=256 index.js"
   },
   "dependencies": {
     "express": "^4.18.2",
-    "puppeteer": "^21.0.0"
+    "playwright-chromium": "^1.40.0",
+    "playwright-extra": "^4.3.6",
+    "puppeteer-extra-plugin-stealth": "^2.11.2",
+    "user-agents": "^1.1.1",
+    "lodash": "^4.17.21",
+    "crypto-js": "^4.2.0",
+    "dotenv": "^16.0.0",
+    "https-proxy-agent": "^6.0.0"
   }
 }
