--- a/package.json
+++ b/package.json
@@ -1,19 +1,14 @@
 {
-  "name": "twitter-secure-bot",
-  "version": "6.0.0",
+  "name": "twitter-bot",
+  "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-    "start": "node --max-old-space-size=256 index.js"
+    "start": "node --max-old-space-size=384 index.js"
   },
   "dependencies": {
     "express": "^4.18.2",
     "playwright-chromium": "^1.40.0",
-    "playwright-extra": "^4.3.6",
-    "puppeteer-extra-plugin-stealth": "^2.11.2",
-    "user-agents": "^1.1.1",
-    "lodash": "^4.17.21",
-    "crypto-js": "^4.2.0",
     "dotenv": "^16.0.0",
-    "https-proxy-agent": "^6.0.0"
+    "lodash": "^4.17.21"
   }
 }
