--- a/package.json
+++ b/package.json
@@ -1,15 +1,6 @@
 {
-  "name": "twitter-bot",
-  "version": "1.0.0",
-  "main": "index.js",
   "scripts": {
     "start": "node --max-old-space-size=384 index.js",
-    "postinstall": "npx playwright install chromium"
-  },
-  "dependencies": {
-    "express": "^4.18.2",
-    "playwright-chromium": "^1.40.0",
-    "dotenv": "^16.0.0",
-    "lodash": "^4.17.21"
+    "postinstall": "npx playwright install chromium --with-deps"
   }
 }
