--- a/package.json
+++ b/package.json
@@ -1,6 +1,12 @@
 {
   "scripts": {
     "start": "node --max-old-space-size=384 index.js",
-    "postinstall": "npx playwright install chromium --with-deps"
+    "postinstall": "PLAYWRIGHT_SKIP_BROWSER_DOWNLOAD=1 npm run start"
+  },
+  "dependencies": {
+    "express": "^4.18.2",
+    "playwright-chromium": "^1.40.0",
+    "dotenv": "^16.0.0",
+    "lodash": "^4.17.21"
   }
 }
