--- a/package.json
+++ b/package.json
@@ -1,7 +1,9 @@
 {
+  "name": "twitter-bot",
+  "version": "1.0.0",
+  "main": "index.js",
   "scripts": {
-    "start": "node --max-old-space-size=384 index.js",
-    "postinstall": "PLAYWRIGHT_SKIP_BROWSER_DOWNLOAD=1 npm run start"
+    "start": "node --max-old-space-size=384 index.js"
   },
   "dependencies": {
     "express": "^4.18.2",
