--- a/package.json
+++ b/package.json
@@ -1,13 +1,13 @@
 {
-  "name": "twitter-bot",
-  "version": "1.0.0",
+  "name": "twitter-bot-n8n",
+  "version": "2.0.0",
   "main": "index.js",
   "scripts": {
-    "start": "node --max-old-space-size=384 index.js"
+    "start": "node index.js"
   },
   "dependencies": {
     "express": "^4.18.2",
-    "playwright-chromium": "^1.40.0",
+    "puppeteer-core": "^21.0.0",
     "dotenv": "^16.0.0",
     "lodash": "^4.17.21"
   }
