--- a/package.json
+++ b/package.json
@@ -1,13 +1,14 @@
 {
-  "name": "twitter-bot-n8n",
-  "version": "2.0.0",
+  "name": "twitter-bot",
+  "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-    "start": "node index.js"
+    "start": "node index.js",
+    "postinstall": "npx playwright install chromium --with-deps || true"
   },
   "dependencies": {
     "express": "^4.18.2",
-    "puppeteer-core": "^21.0.0",
+    "playwright-chromium": "^1.40.0",
     "dotenv": "^16.0.0",
     "lodash": "^4.17.21"
   }
