--- a/package.json
+++ b/package.json
@@ -3,12 +3,11 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-    "start": "node index.js",
-    "postinstall": "npx playwright install chromium --with-deps || true"
+    "start": "node index.js"
   },
   "dependencies": {
     "express": "^4.18.2",
-    "playwright-chromium": "^1.40.0",
+    "puppeteer": "^21.0.0",
     "dotenv": "^16.0.0",
     "lodash": "^4.17.21"
   }
